--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -78,23 +78,23 @@
           "instruction": "Déplace mon marqueur de piste sur la piste compagnie nommé <i>ci-dessous</i>.",
           "rulesHint": "Gardez les règles suivantes à l'esprit:",
           "hint1": "A chaque fois qu'un de mes marqueurs de piste (ou l'un des votres) franchit un jalon, la récompense en CrypCoin est distribuée comme d'habitude.",
-          "hint2": "Whenever one of my track markers passes a money barrier, its cost must be paid with CrypCoin from my e. If I do not have enough CrypCoin to do so, pay as much as I have and then continue to move my track marker forward.",
-          "hint3": "Once a marker of mine has reached the end of its company track: From now on, for each space that it would normally move forward on this track, I gain 2 CrypCoin instead.",
-          "hint4": "All track bonuses that my markers unlock are ignored for me.",
-          "mostValuable": "The <b>most valuable company track</b> is the one that has the most visible coin icons in its station.",
-          "tied": "Whenever company tracks are tied in value, the one whose station has more vacant home spaces is considered more valuable. If this does not break the tie, it is the tied track whose ID comes first in alphabetical order.",
-          "biggestMargin": "I <b>lead by the biggest margin</b> on the company track where there are the most spaces between my track marker and the one in second place (money barriers are not spaces). If I don’t lead on any track, it is the track where I share the lead. If I’m behind on all tracks, it is the track where I’m the fewest spaces behind the leading marker. Ties are broken in favor of the more valuable track.",
+          "hint2": "Quand mon marqueur de piste traverse une barrière payante, je paie de ma réserve. Si je n'ai pas assez de CrypCoin, je dépense tout ce que j'ai et je continue d'avancer.",
+          "hint3": "A partir du moment où j'ai atteind la fin d'une piste: pour chaque mouvement supplémentaire de mon marqueur, je gagne 2 CrypCoin ",
+          "hint4": "Les bonus des pistes compagnie ne sont pas utilisé par Luna.",
+          "mostValuable": "La<b>piste dompagnie la plus rentable</b> est celle dont la station possède le plus de pièces découvertes.",
+          "tied": "Quand les piste compagnie sont à égalité en valeur, celle qui a le plus de station vacante est considérée comme la plus rentable. Si l'égalité persiste, c'est la lettre de désignation de la piste qui sert à départager en utilisant l'ordre alphabétique.",
+          "biggestMargin": "Je <b>mène par le plus grand écart</b> sur la piste compagnie où il y a le plus d'écart entre mon marqueur et celui du deuxième joueur (Les péages ne sont pas des cases). Si je mène sur aucune piste c'est celle où je partage l'égalité. Si je suis derrière sur toutes les pistes, c'est celle où j'ai le moins de retard. Les égalités sont départagés par la valeur de la compagnie: je prends celle qui a le plus de valeur",
           "farthestBehind": "I’m <b>farthest behind</b> on the track where there are the most spaces between my track marker and the leading one. If I’m not behind on any tracks, it is the track where I share the lead or lead by the smallest margin. Ties are broken in favor of the more valuable track."
         }
       },
       "discardResearchPlan": {
-        "discard": "Luna défausse <b>{plan}-research plan</b>:",
+        "discard": "Luna défausse un <b>{plan}-plan de recherche</b>:",
         "discardFirstCol": "Luna défausse un <b>{plan}-plan de recherche</b>; Luna gagne le CrypCoin sur la case de prime",
         "discardSpecial": "Luna défausse le <b>dernier plan de recherche spécial apparu </b>.",
         "help": {
           "title": "Défausse un jeton de recherche",
-          "instruction": "Whenever an action lets me discard research plans, remove the designated plans in the research display from the game. Afterwards, fill each of the now empty lettered spaces in the research display as usual.",
-          "specialResearchPlan": "Whenever I discard the latest face-up <b>special research plan</b> it means: Of the face-up special research plans on the round track, discard the one that was revealed last. If there is none, don’t discard any."
+          "instruction": "Quand je défausse des plans de recherche, je les enlève du jeu à partir des emplacements désignés. Après cela, je remplie comme d'habitude les espaces laissés vides.",
+          "specialResearchPlan": "Quand je dois défausser le dernier <b>plan de recherhce spécial</b> cela désigne le plan de récherche spécial de la manche en cours. si il n'est plus disponible, je ne défausse rien"
         }
       },
       "expandCompany": {
@@ -102,14 +102,14 @@
         "min": "MIN",
         "max": "MAX",
         "help": {
-          "title": "Extension de la compagnie",
-          "instruction": "Whenever an action lets me expand a company, its card states how many expansion points must be used to expand which company. This is done differently depending on which side of the board you’re playing on <i>(see below)</i>.",
+          "title": "Expansion de la compagnie",
+          "instruction": "Quand une action me demande d'étendre una compagnie, sa carte me donne le nombre de point d'expansion et la désignation de la compagnie à étendre. Ma façon de s'étendre dépend du plateau de jeu où je me trouve: <i>(voir ci dessous)</i>.",
           "rulesHint": "Notes importantes:",
-          "hint1": "For reasons of clarity, one of the columns in each station is considered the current <b>main outpost column</b>, which is defined as follows: It is the column for outposts that has the most vacant home spaces but whose final home space (which shows 2 coin icons) is not vacant. Only if the final home spaces of all columns are vacant, it is instead the one with the most vacant home spaces that also shows the fewest coin icons. Any ties are broken in favor of the column that is closer to its company logo on the board.",
+          "hint1": "Pour être plus clair, une seule colonne de chaque station est considérée comme <b>la colonne principale</b>, Celle ci est définie ci -après: It is the column for outposts that has the most vacant home spaces but whose final home space (which shows 2 coin icons) is not vacant. Only if the final home spaces of all columns are vacant, it is instead the one with the most vacant home spaces that also shows the fewest coin icons. Any ties are broken in favor of the column that is closer to its company logo on the board.",
           "hint2": "I never gain the rewards of the sectors/Belt spaces that are entered on my turn.",
           "hint3": "If a company cannot be expanded because its station has no outposts/shuttles left that can be placed regularly, its expansion points are forfeited.",
           "moon": {
-            "title": "Moon side",
+            "title": "Côté lune",
             "rulesHint": "For each expansion point, place 1 outpost from the station of the expanding company on the Moon as follows:",
             "hint1": "Take the top outpost from the expanding company’s main outpost column and place it in the sector defined by the following rules:",
             "hint2": "The sector must be reachable. This means, it must be adjacent to either the expanding company’s station or to any sector that has an outpost of the expanding company in it. (It doesn’t matter if it’s reachable via a single or a double line.)",
